--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -53,24 +53,24 @@
                                 <hr>
                                 <div class="row py-2 text-secondary">
                                     <div class="col-6">
-                                        <i class="fas fa-th-large"></i> Sqft: 3200
+                                        <i class="fas fa-th-large"></i> Sqft: {{ listing.sqft }}
                                     </div>
                                     <div class="col-6">
-                                        <i class="fas fa-car"></i> Garage: 2
+                                        <i class="fas fa-car"></i> Garage: {{ listing.garage }}
                                     </div>
                                 </div>
                                 <div class="row py-2 text-secondary">
                                     <div class="col-6">
-                                        <i class="fas fa-bed"></i> Bedrooms: 3
+                                        <i class="fas fa-bed"></i> Bedrooms: {{ listing.bedrooms }}
                                     </div>
                                     <div class="col-6">
-                                        <i class="fas fa-bath"></i> Bathrooms: 2
+                                        <i class="fas fa-bath"></i> Bathrooms: {{ listing.bathrooms }}
                                     </div>
                                 </div>
                                 <hr>
                                 <div class="row py-2 text-secondary">
                                     <div class="col-12">
-                                        <i class="fas fa-user"></i> Kyle Brown
+                                        <i class="fas fa-user"></i> {{ listing.realtor }}
                                     </div>
                                 </div>
                                 <div class="row text-secondary pb-2">
