--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -75,11 +75,11 @@
                                 </div>
                                 <div class="row text-secondary pb-2">
                                     <div class="col-6">
-                                        <i class="fas fa-clock"></i> 2 days ago
+                                        <i class="fas fa-clock"></i> {{ listing.list_date | timesince }}
                                     </div>
                                 </div>
                                 <hr>
-                                <a href="listing.html" class="btn btn-primary btn-block">More Info</a>
+                                <a href="{% url 'listing' listing.id %}" class="btn btn-primary btn-block">More Info</a>
                             </div>
                         </div>
                     </div>
