--- a/btrealestate/static/css/style.css
+++ b/btrealestate/static/css/style.css
@@ -12,7 +12,8 @@ img {
   text-transform: uppercase; }
 
 .social a {
-  margin-right: 0.4rem; }
+  margin-right: 0.4rem;
+  text-decoration: none; }
 
 #showcase {
   background: url(../img/showcase.jpg) no-repeat center center fixed;
