--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -4,24 +4,24 @@
             <div class="col-md-4">
                 <i class="fas fa-phone"></i> (617)-555-5555
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 text-center">
                 <i class="fas fa-envelope-open"></i> contact@btrealestate.co
             </div>
             <div class="col-md-4">
-                <div class="social text-right">
-                    <a href="#">
+                <div class="social text-right" style="font-size: 20px;">
+                    <a href="#" style="text-decoration: none;" title="Twitter">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#">
+                    <a href="#" style="text-decoration: none;" title="Facebook">
                         <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="#">
+                    <a href="#" style="text-decoration: none;" title="LinkedIn">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="#">
+                    <a href="#" style="text-decoration: none;" title="Instagram">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="#">
+                    <a href="#" style="text-decoration: none;" title="Pinterest">
                         <i class="fab fa-pinterest"></i>
                     </a>
                 </div>
