--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -7,9 +7,9 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-md-12">
-                <h1 class="display-4">{{listing.title}}</h1>
+                <h1 class="display-4">{{ listing.title }}</h1>
                 <p class="lead">
-                    <i class="fas fa-map-marker"></i> {{listing.city}} {{listing.state}}, {{listing.zipcode}}
+                    <i class="fas fa-map-marker"></i> {{ listing.city }} {{ listing.state }}, {{ listing.zipcode }}
                 </p>
             </div>
         </div>
@@ -27,7 +27,7 @@
                 <li class="breadcrumb-item">
                     <a href="{% url 'listings' %}">Listings</a>
                 </li>
-                <li class="breadcrumb-item active">{{listing.title}}</li>
+                <li class="breadcrumb-item active">{{ listing.title }}</li>
             </ol>
         </nav>
     </div>
@@ -40,48 +40,48 @@
         <div class="row">
             <div class="col-md-9">
                 <!-- Home Main Image -->
-                <img src="{{listing.photo_main.url}}" alt="" class="img-main img-fluid mb-3">
+                <img src="{{ listing.photo_main.url }}" alt="" class="img-main img-fluid mb-3">
                 <!-- Thumbnails -->
                 <div class="row mb-5 thumbs">
                     {% if listing.photo_1 %}
                         <div class="col-md-2">
-                            <a href="{{listing.photo_1.url}}" data-lightbox="home-images">
-                                <img src="{{listing.photo_1.url}}" alt="" class="img-fluid">
+                            <a href="{{ listing.photo_1.url }}" data-lightbox="home-images">
+                                <img src="{{ listing.photo_1.url }}" alt="" class="img-fluid">
                             </a>
                         </div>
                     {% endif %}
                     {% if listing.photo_2 %}
                         <div class="col-md-2">
-                            <a href="{{listing.photo_2.url}}" data-lightbox="home-images">
-                                <img src="{{listing.photo_2.url}}" alt="" class="img-fluid">
+                            <a href="{{ listing.photo_2.url }}" data-lightbox="home-images">
+                                <img src="{{ listing.photo_2.url }}" alt="" class="img-fluid">
                             </a>
                         </div>
                     {% endif %}
                     {% if listing.photo_3 %}
                         <div class="col-md-2">
-                            <a href="{{listing.photo_3.url}}" data-lightbox="home-images">
-                                <img src="{{listing.photo_3.url}}" alt="" class="img-fluid">
+                            <a href="{{ listing.photo_3.url }}" data-lightbox="home-images">
+                                <img src="{{ listing.photo_3.url }}" alt="" class="img-fluid">
                             </a>
                         </div>
                     {% endif %}
                     {% if listing.photo_4 %}
                         <div class="col-md-2">
-                            <a href="{{listing.photo_4.url}}" data-lightbox="home-images">
-                                <img src="{{listing.photo_4.url}}" alt="" class="img-fluid">
+                            <a href="{{ listing.photo_4.url }}" data-lightbox="home-images">
+                                <img src="{{ listing.photo_4.url }}" alt="" class="img-fluid">
                             </a>
                         </div>
                     {% endif %}
                     {% if listing.photo_5 %}
                         <div class="col-md-2">
-                            <a href="{{listing.photo_5.url}}" data-lightbox="home-images">
-                                <img src="{{listing.photo_5.url}}" alt="" class="img-fluid">
+                            <a href="{{ listing.photo_5.url }}" data-lightbox="home-images">
+                                <img src="{{ listing.photo_5.url }}" alt="" class="img-fluid">
                             </a>
                         </div>
                     {% endif %}
                     {% if listing.photo_6 %}
                         <div class="col-md-2">
-                            <a href="{{listing.photo_6.url}}" data-lightbox="home-images">
-                                <img src="{{listing.photo_6.url}}" alt="" class="img-fluid">
+                            <a href="{{ listing.photo_6.url }}" data-lightbox="home-images">
+                                <img src="{{ listing.photo_6.url }}" alt="" class="img-fluid">
                             </a>
                         </div>
                     {% endif %}
@@ -92,19 +92,19 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item text-secondary">
                                 <i class="fas fa-money-bill-alt"></i> Asking Price:
-                                <span class="float-right">${{listing.price | intcomma}}</span>
+                                <span class="float-right">${{ listing.price | intcomma }}</span>
                             </li>
                             <li class="list-group-item text-secondary">
                                 <i class="fas fa-bed"></i> Bedrooms:
-                                <span class="float-right">{{listing.bedrooms}}</span>
+                                <span class="float-right">{{ listing.bedrooms }}</span>
                             </li>
                             <li class="list-group-item text-secondary">
                                 <i class="fas fa-bath"></i> Bathrooms:
-                                <span class="float-right">{{listing.bathrooms}}</span>
+                                <span class="float-right">{{ listing.bathrooms }}</span>
                             </li>
                             <li class="list-group-item text-secondary">
                                 <i class="fas fa-car"></i> Garage:
-                                <span class="float-right">{{listing.garage}}</span>
+                                <span class="float-right">{{ listing.garage }}</span>
                             </li>
                         </ul>
                     </div>
@@ -112,20 +112,20 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item text-secondary">
                                 <i class="fas fa-th-large"></i> Square Feet:
-                                <span class="float-right">{{listing.sqft}}</span>
+                                <span class="float-right">{{ listing.sqft }}</span>
                             </li>
                             <li class="list-group-item text-secondary">
                                 <i class="fas fa-square"></i> Lot Size:
-                                <span class="float-right">{{listing.lot_size}} Acres
+                                <span class="float-right">{{ listing.lot_size }} Acres
                                 </span>
                             </li>
                             <li class="list-group-item text-secondary">
                                 <i class="fas fa-calendar"></i> Listing Date:
-                                <span class="float-right">{{listing.list_date}}</span>
+                                <span class="float-right">{{ listing.list_date }}</span>
                             </li>
                             <li class="list-group-item text-secondary">
                                 <i class="fas fa-bed"></i> Realtor:
-                                <span class="float-right">{{listing.realtor}}</span>
+                                <span class="float-right">{{ listing.realtor }}</span>
                             </li>
                         </ul>
                     </div>
@@ -134,16 +134,16 @@
                 <!-- Description -->
                 <div class="row mb-5">
                     <div class="col-md-12">
-                        {{listing.description}}
+                        {{ listing.description }}
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="card mb-3">
-                    <img class="card-img-top" src="{{listing.realtor.photo.url}}" alt="">
+                    <img class="card-img-top" src="{{ listing.realtor.photo.url }}" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Property Realtor</h5>
-                        <h6 class="text-secondary">{{listing.realtor}}</h6>
+                        <h6 class="text-secondary">{{ listing.realtor }}</h6>
                     </div>
                 </div>
                 <button class="btn-primary btn-block btn-lg" data-toggle="modal" data-target="#inquiryModal">
@@ -168,7 +168,7 @@
                 <form>
                     <div class="form-group">
                         <label for="property_name" class="col-form-label">Property:</label>
-                        <input type="text" name="listing" class="form-control" value="45 Drivewood Cirlce" disabled>
+                        <input type="text" name="listing" class="form-control" value="{{ listing.title }}" disabled>
                     </div>
                     <div class="form-group">
                         <label for="name" class="col-form-label">Name:</label>
