Add User Registration Functionality

--- a/templates/partials/_alerts.html
+++ b/templates/partials/_alerts.html
@@ -8,7 +8,7 @@
 
                 <strong>
                     {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-                        Error: 
+                        Error<br />
                     {% else %}
                         {{ message.tags | title }}
                     {% endif %}
